--- a/comlec_front/package.json
+++ b/comlec_front/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2",
     "cheetah-grid": "^1.13.1",
+    "jquery": "^3.7.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
