--- a/comlec_front/package.json
+++ b/comlec_front/package.json
@@ -12,8 +12,10 @@
     "bootstrap": "^5.3.2",
     "cheetah-grid": "^1.13.1",
     "jquery": "^3.7.1",
+    "jquery-csv": "^1.0.21",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
