--- a/comlec_front/package.json
+++ b/comlec_front/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "cheetah-grid": "^1.13.1",
     "jquery": "^3.7.1",
     "jquery-csv": "^1.0.21",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
   },
